Фикс для /tables/:table_id/free-times
